--- a/day1/.env
+++ b/day1/.env
@@ -1,2 +1,2 @@
-HUGGINGFACE_TOKEN="hf-********"
-NGROK_TOKEN="********"
+HUGGINGFACE_TOKEN="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"
+NGROK_TOKEN="2oFCMwNgOR7y15pjqfySEqPoIHB_HYuNLRiLT6NafozG69op"
